--- a/css/reviews.css
+++ b/css/reviews.css
@@ -93,14 +93,256 @@
     height: auto !important;
 }
 
+/* main__video end */
+/* ************************************************************************************ */
+/* main__opinion start */
 
+.main__opinion_box_first,
+.main__opinion_box_second {
+    padding: 30px;
+    line-height: 1.5;
+    position: relative;
+    background: #f5f5f5;
+    margin-bottom: 9.27%;
+}
 
+.main__opinion_box_first_p,
+.main__opinion_box_second_p {
+    margin-bottom: 0;
+    line-height: 1.7em;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+}
 
+.main__opinion_box_first_6,
+.main__opinion_box_second_6 {
+    font-size: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+    margin: 32px 0 0 0;
+}
 
+.main__opinion_box_first .editor,
+.main__opinion_box_second .editor {
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    border: 3px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: -15px;
+    left: 45%;
+    z-index: 2;
+}
 
+.main__login_text_span {
+    color: #3366ff;
+    font-size: 18px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+}
 
+.main__login_text_p {
+    color: #800080;
+    font-size: 18px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    margin-bottom: 0;
+    padding-top: 20px;
+}
 
+.main__login_text {
+    padding-top: 100px;
+}
 
+.main__opinion {
+    margin-bottom: 100px;
+}
+
+/* main__opinion end */
+/* ******************************************************************* */
+/* footer__block start */
+
+.footer__block {
+    background: rgb(255, 250, 250);
+    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
+    padding: 100px 0 0 0;
+    border-radius: 250px 0 0 0;
+}
+
+.footer__block_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.footer__block_box_span {
+    font-size: 25px;
+    color: #fff;
+    font-weight: 700;
+    font-family: Montserrat;
+    font-style: normal;
+    line-height: 2;
+}
+
+.footer__block_box_h1 {
+    font-size: 40px;
+    color: #fff;
+    font-weight: 700;
+    font-family: Montserrat;
+    font-style: normal;
+    padding-top: 30px;
+    margin-bottom: 0;
+}
+
+.footer__block_box_button {
+    outline: none;
+    background-color: #579A5C;
+    border: 1px solid #579A5C;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 50px auto;
+    transition: .3s !important;
+    padding: 18px 34px;
+    font-weight: 600;
+    color: #fff;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 14px;
+}
+
+.footer__block_box_button_link {
+    font-weight: 600;
+    color: #fff;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 14px;
+    border-radius: 4px;
+    letter-spacing: 5px;
+    text-decoration: none;
+}
+
+.footer__block_box_button_link:hover {
+    color: #fff;
+}
+
+.footer__block_box_button_icon {
+    font-size: 18px;
+    padding-left: 15px;
+    display: none !important;
+}
+
+.footer__block_box_button:hover .footer__block_box_button_icon {
+    display: block !important;
+}
+
+.footer__block_img {
+    width: 300px;
+    height: 300px;
+    background: #fff;
+    border-radius: 50px;
+    margin: 0 auto;
+}
+
+.instagram,
+.facebook,
+.telegram {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #579A5C;
+    margin: 0 10px 0 10px;
+}
+
+.instagram:hover,
+.facebook:hover,
+.telegram:hover {
+    background: #579A5C;
+}
+
+.instagram:hover,
+.facebook:hover,
+.facebook:hover .instagram_link,
+.facebook_link,
+.telegram_link {
+    color: #fff;
+}
+
+.instagram_link,
+.facebook_link,
+.telegram_link {
+    font-size: 20px;
+    color: #fff;
+}
+
+.instagram_link:hover,
+.facebook_link:hover,
+.telegram_link:hover {
+    color: #fff;
+}
+
+.footer__block_icon {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+
+.footer__menu {
+    margin-top: 100px;
+    padding: 15px 0;
+    background: #000000;
+}
+
+.footer__menu_nav_ul {
+    list-style: none;
+    margin: 0;
+}
+
+.footer__menu_nav_ul_li_link {
+    font-weight: 600;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 16px;
+    text-decoration: none;
+    color: #fff;
+    transition: .3s;
+}
+
+.footer__menu_nav_ul_li_link:hover {
+    color: #de2a1b;
+}
+
+.footer__lastBox {
+    padding: 15px 0;
+}
+
+.footer__lastBox_p {
+    color: #fff;
+    margin-bottom: 0;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Montserrat;
+    font-style: normal;
+}
+
+ol,
+ul {
+    padding-left: 0;
+}
 
 
 
@@ -133,11 +375,60 @@
     .main__video_box {
         margin-bottom: 30px;
     }
+
+    .main__opinion_box_first,
+    .main__opinion_box_second {
+        line-height: 1;
+        margin: 0 10px 40px 10px;
+    }
+
+    .main__opinion_box_first_p,
+    .main__opinion_box_second_p {
+        line-height: 1.3em;
+    }
+
+    .main__login_text_p {
+        font-size: 14px;
+        padding-top: 15px;
+    }
+
+    .footer__menu_nav_ul_li_link {
+        font-size: 14px;
+        padding: 0 15px 0 15px;
+    }
+
+    .footer__menu_nav_ul_li {
+        padding-top: 10px;
+    }
+
+    .footer__lastBox_p {
+        font-size: 14px;
+    }
+
+    .footer__block_box_span {
+        font-size: 20px;
+    }
+
+    .footer__block_box_h1 {
+        font-size: 34px;
+    }
 }
 
 @media(max-width:767px) {
     .main__video_box {
         margin-left: 15px;
+    }
+
+    .footer__block_img_logo {
+        width: 70%;
+    }
+
+    .footer__block_img {
+        width: 200px;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -145,10 +436,34 @@
     .main__video_box {
         margin-left: 0;
     }
+
+    .footer__block {
+        border-radius: 0;
+    }
+
+    .footer__lastBox_p {
+        text-align: center;
+    }
 }
 
 @media(max-width:520px) {}
 
-@media(max-width:414px) {}
+@media(max-width:414px) {
+    .main__login_text_span {
+        font-size: 14px;
+    }
 
-@media(max-width:320px) {}
+    .footer__block_box_span {
+        font-size: 14px;
+    }
+
+    .footer__block_box_h1 {
+        font-size: 32px;
+    }
+}
+
+@media(max-width:320px) {
+    .footer__block_box_h1 {
+        font-size: 25px;
+    }
+}
