--- a/css/TeflJobs.css
+++ b/css/TeflJobs.css
@@ -268,8 +268,239 @@ ul {
 .main__offer {
     margin-bottom: 100px;
 }
+
 /* main__offer end */
 /* ////////////////////////////////////////////////////////////////////////////////// */
+/* main__online start */
+
+.main__online {
+    background-color: #ebe3e0 !important;
+    padding: 4% 0;
+    margin-bottom: 100px;
+}
+
+.main__online_text-h6,
+.main__online_text-h5 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 1em;
+    margin-bottom: 0;
+    padding-bottom: 10px;
+}
+
+.main__online_text_img {
+    max-width: 100%;
+    height: auto;
+    padding-bottom: 10px;
+}
+
+.main__online_text-p {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    margin-bottom: 0;
+    padding-bottom: 10px;
+}
+
+.main__online_text-ul-li {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    padding-bottom: 10px;
+}
+
+.main__online_text-require {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    padding-bottom: 10px;
+}
+
+/* main__online end */
+/* *********************************************************** */
+/* footer__block start */
+
+.footer__block {
+    background: rgb(255, 250, 250);
+    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
+    padding: 100px 0 0 0;
+    border-radius: 250px 0 0 0;
+}
+
+.footer__block_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.footer__block_box_span {
+    font-size: 25px;
+    color: #fff;
+    font-weight: 700;
+    font-family: Montserrat;
+    font-style: normal;
+    line-height: 2;
+}
+
+.footer__block_box_h1 {
+    font-size: 40px;
+    color: #fff;
+    font-weight: 700;
+    font-family: Montserrat;
+    font-style: normal;
+    padding-top: 30px;
+    margin-bottom: 0;
+}
+
+.footer__block_box_button {
+    outline: none;
+    background-color: #579A5C;
+    border: 1px solid #579A5C;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 50px auto;
+    transition: .3s !important;
+    padding: 18px 34px;
+    font-weight: 600;
+    color: #fff;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 14px;
+}
+
+.footer__block_box_button_link {
+    font-weight: 600;
+    color: #fff;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 14px;
+    border-radius: 4px;
+    letter-spacing: 5px;
+    text-decoration: none;
+}
+
+.footer__block_box_button_link:hover {
+    color: #fff;
+}
+
+.footer__block_box_button_icon {
+    font-size: 18px;
+    padding-left: 15px;
+    display: none !important;
+}
+
+.footer__block_box_button:hover .footer__block_box_button_icon {
+    display: block !important;
+}
+
+.footer__block_img {
+    width: 300px;
+    height: 300px;
+    background: #fff;
+    border-radius: 50px;
+    margin: 0 auto;
+}
+
+.instagram,
+.facebook,
+.telegram {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #579A5C;
+    margin: 0 10px 0 10px;
+}
+
+.instagram:hover,
+.facebook:hover,
+.telegram:hover {
+    background: #579A5C;
+}
+
+.instagram:hover,
+.facebook:hover,
+.facebook:hover .instagram_link,
+.facebook_link,
+.telegram_link {
+    color: #fff;
+}
+
+.instagram_link,
+.facebook_link,
+.telegram_link {
+    font-size: 20px;
+    color: #fff;
+}
+
+.instagram_link:hover,
+.facebook_link:hover,
+.telegram_link:hover {
+    color: #fff;
+}
+
+.footer__block_icon {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+
+.footer__menu {
+    margin-top: 100px;
+    padding: 15px 0;
+    background: #000000;
+}
+
+.footer__menu_nav_ul {
+    list-style: none;
+    margin: 0;
+}
+
+.footer__menu_nav_ul_li_link {
+    font-weight: 600;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 16px;
+    text-decoration: none;
+    color: #fff;
+    transition: .3s;
+}
+
+.footer__menu_nav_ul_li_link:hover {
+    color: #de2a1b;
+}
+
+.footer__lastBox {
+    padding: 15px 0;
+}
+
+.footer__lastBox_p {
+    color: #fff;
+    margin-bottom: 0;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Montserrat;
+    font-style: normal;
+}
+
+ol,
+ul {
+    padding-left: 0;
+}
+
+
+
 
 /* ******************************************media**************************************** */
 @media(max-width:991px) {
@@ -308,6 +539,27 @@ ul {
     .main__degree_img {
         width: 100%;
     }
+
+    .footer__menu_nav_ul_li_link {
+        font-size: 14px;
+        padding: 0 15px 0 15px;
+    }
+
+    .footer__menu_nav_ul_li {
+        padding-top: 10px;
+    }
+
+    .footer__lastBox_p {
+        font-size: 14px;
+    }
+
+    .footer__block_box_span {
+        font-size: 20px;
+    }
+
+    .footer__block_box_h1 {
+        font-size: 34px;
+    }
 }
 
 @media(max-width:767px) {
@@ -316,6 +568,23 @@ ul {
     .main__text_1_span,
     .main__text_2_p {
         font-size: 14px;
+    }
+
+    .main__online_text-p,
+    .main__online_text-ul-li {
+        font-size: 12px;
+    }
+
+    .footer__block_img_logo {
+        width: 70%;
+    }
+
+    .footer__block_img {
+        width: 200px;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -331,6 +600,18 @@ ul {
 
     .main__offer_text {
         padding: 0 15px 0 15px;
+    }
+
+    .main__online {
+        padding: 9% 7%;
+    }
+
+    .footer__block {
+        border-radius: 0;
+    }
+
+    .footer__lastBox_p {
+        text-align: center;
     }
 }
 
@@ -351,10 +632,27 @@ ul {
     .main__box_logo_p {
         font-size: 14px;
     }
+
+    .main__online_text-h6,
+    .main__online_text-h5 {
+        font-size: 18px;
+    }
+
+    .footer__block_box_span {
+        font-size: 14px;
+    }
+
+    .footer__block_box_h1 {
+        font-size: 32px;
+    }
 }
 
 @media(max-width:320px) {
     .header__fon {
         padding: 100px 0 150px 0;
+    }
+
+    .footer__block_box_h1 {
+        font-size: 25px;
     }
 }
