--- a/css/TeflJobs.css
+++ b/css/TeflJobs.css
@@ -32,6 +32,10 @@
     margin: 0 auto;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 /* ************************************* */
 /* ******************************header start******************************* */
 
