--- a/css/contact.css
+++ b/css/contact.css
@@ -31,7 +31,9 @@
 .margin_auto {
     margin: 0 auto;
 }
-
+body{
+    overflow-x: hidden;
+}
 /* ************************************* */
 /* ******************************header start******************************* */
 
