--- a/css/reviews.css
+++ b/css/reviews.css
@@ -32,6 +32,11 @@
     margin: 0 auto;
 }
 
+
+body {
+    overflow-x: hidden;
+}
+
 /* ************************************* */
 /* ******************************header start******************************* */
 
