--- a/css/terms.css
+++ b/css/terms.css
@@ -70,6 +70,217 @@ body {
     color: #fff;
 }
 
-.header__menu{
-    border-bottom: 2px solid #666;;
+.header__menu {
+    border-bottom: 2px solid #666;
+    ;
+}
+
+/* *********************************header end********************* */
+/* ******************************************************************************* */
+/* main__block start */
+
+.main__block_box {
+    padding: 80px 20px 0 20px;
+    width: 950px;
+    border-right: 2px solid #666;
+}
+
+.main__block_box_h1 {
+    font-size: 30px;
+    font-weight: 600;
+    font-family: Montserrat;
+    font-style: normal;
+    margin-bottom: 0;
+}
+
+.main__block_box_p {
+    font-size: 26px;
+    font-weight: 600;
+    font-family: Montserrat;
+    font-style: normal;
+    margin-bottom: 0;
+    padding: 20px 0;
+}
+
+.main__block_box_text_h5 {
+    font-weight: 600;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 16px;
+    margin-bottom: 0;
+    padding-bottom: 15px;
+}
+
+.main__block_box_text_p {
+    font-weight: 500;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 16px;
+    margin-bottom: 0;
+    padding-bottom: 1em;
+    line-height: 1.7em;
+}
+
+.main__block_box_span {
+    font-weight: 600;
+    font-family: Montserrat;
+    font-style: normal;
+    color: #3366ff;
+    font-size: 14px;
+}
+
+.main__block_box_h5 {
+    font-weight: 600;
+    font-family: Montserrat;
+    font-style: normal;
+    color: #800080;
+    font-size: 14px;
+    margin-bottom: 0;
+    padding: 15px 0 40px 0;
+}
+
+/* main__block end */
+/* ********************************************************* */
+/* footer start */
+.footer__menu {
+    padding: 15px 0;
+    background: #000000;
+}
+
+.footer__menu_nav_ul {
+    list-style: none;
+    margin: 0;
+}
+
+.footer__menu_nav_ul_li_link {
+    font-weight: 600;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 16px;
+    text-decoration: none;
+    color: #fff;
+    transition: .3s;
+}
+
+.footer__menu_nav_ul_li_link:hover {
+    color: #de2a1b;
+}
+
+.footer__lastBox {
+    padding: 15px 0;
+    background: #ff5252;
+}
+
+.footer__lastBox_p {
+    color: #fff;
+    margin-bottom: 0;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Montserrat;
+    font-style: normal;
+}
+
+ol,
+ul {
+    padding-left: 0;
+}
+
+
+/* **************************************************************************** */
+/* ******************media************************** */
+
+@media(max-width:991px) {
+    .navbar-collapse {
+        flex-basis: 100%;
+        flex-grow: 1;
+        align-items: center;
+        position: absolute;
+        background: #fff;
+        z-index: 10;
+        width: 100%;
+        padding: 15px 19px;
+        top: 95px;
+        left: 0;
+    }
+
+    .header_button {
+        font-size: 25px;
+        line-height: 1;
+        color: #de2a1b;
+    }
+
+    .navbar-light .navbar-toggler {
+        box-shadow: none !important;
+        border: none;
+    }
+
+    .navbar-light .navbar-toggler:focus {
+        outline: 3px solid #de2a1b;
+    }
+
+    .main__block_box {
+        padding: 100px 0 0 0;
+        width: 100% !important;
+        border-right: none;
+    }
+
+    .footer__menu_nav_ul_li_link {
+        font-size: 14px;
+        padding: 0 15px 0 15px;
+    }
+
+    .footer__menu_nav_ul_li {
+        padding-top: 10px;
+    }
+
+    .footer__lastBox_p {
+        font-size: 14px;
+    }
+}
+
+@media(max-width:767px) {
+    .main__container {
+        max-width: 1000px;
+    }
+
+    .main__block,
+    .header__menu {
+        padding: 0 40px 0 40px;
+    }
+}
+
+@media(max-width:575px) {
+    .main__block_box_p {
+        font-size: 18px;
+    }
+
+    .main__block_box_text_p {
+        font-size: 14px;
+    }
+
+    .footer__lastBox_p {
+        text-align: center;
+    }
+}
+
+@media(max-width:520px) {}
+
+@media(max-width:414px) {
+
+    .main__block,
+    .header__menu {
+        padding: 0 20px 0 20px;
+    }
+}
+
+@media(max-width:320px) {
+
+    .main__block,
+    .header__menu {
+        padding: 0;
+    }
+
+    .main__block_box_h1 {
+        font-size: 23px;
+    }
 }
