--- a/css/TeflJobs.css
+++ b/css/TeflJobs.css
@@ -32,7 +32,7 @@
     margin: 0 auto;
 }
 
-body{
+body {
     overflow-x: hidden;
 }
 
@@ -508,6 +508,10 @@ ul {
 
 /* ******************************************media**************************************** */
 @media(max-width:991px) {
+    .nav-item {
+        padding-bottom: 10px;
+    }
+
     .navbar-collapse {
         flex-basis: 100%;
         flex-grow: 1;
@@ -658,5 +662,17 @@ ul {
 
     .footer__block_box_h1 {
         font-size: 25px;
+    }
+
+    .header__dropdown {
+        width: 100% !important;
+    }
+
+    .dropdown-item {
+        padding: .25rem 6px;
+    }
+
+    .dropdown-menu {
+        font-size: 14px;
     }
 }
