--- a/css/centr.css
+++ b/css/centr.css
@@ -373,6 +373,10 @@ ul {
 /* **********************media************************** */
 
 @media(max-width:991px) {
+    .nav-item {
+        padding-bottom: 10px;
+    }
+
     .navbar-collapse {
         flex-basis: 100%;
         flex-grow: 1;
@@ -521,5 +525,17 @@ ul {
 
     .header__fon_img_h1 {
         font-size: 37px;
+    }
+
+    .header__dropdown {
+        width: 100% !important;
+    }
+
+    .dropdown-item {
+        padding: .25rem 6px;
+    }
+
+    .dropdown-menu {
+        font-size: 14px;
     }
 }
