--- a/css/partners.css
+++ b/css/partners.css
@@ -302,6 +302,9 @@ ul {
 /* media */
 
 @media(max-width:991px) {
+    .nav-item {
+        padding-bottom: 10px;
+    }
     .navbar-collapse {
         flex-basis: 100%;
         flex-grow: 1;
@@ -413,5 +416,16 @@ ul {
 @media(max-width:320px) {
     .footer__block_box_h1 {
         font-size: 25px;
+    }
+    .header__dropdown {
+        width: 100% !important;
+    }
+
+    .dropdown-item {
+        padding: .25rem 6px;
+    }
+
+    .dropdown-menu {
+        font-size: 14px;
     }
 }
