--- a/css/reviews.css
+++ b/css/reviews.css
@@ -377,6 +377,10 @@ ul {
 /* ************************************media********************************* */
 
 @media(max-width:991px) {
+    .nav-item {
+        padding-bottom: 10px;
+    }
+
     .main__video_box {
         margin-bottom: 30px;
     }
@@ -470,5 +474,17 @@ ul {
 @media(max-width:320px) {
     .footer__block_box_h1 {
         font-size: 25px;
+    }
+
+    .header__dropdown {
+        width: 100% !important;
+    }
+
+    .dropdown-item {
+        padding: .25rem 6px;
+    }
+
+    .dropdown-menu {
+        font-size: 14px;
     }
 }
