--- a/css/style.css
+++ b/css/style.css
@@ -642,6 +642,10 @@ ul {
 
 
 @media(max-width:991px) {
+    .nav-item {
+        padding-bottom: 10px;
+    }
+
     .navbar-collapse {
         flex-basis: 100%;
         flex-grow: 1;
@@ -984,5 +988,17 @@ ul {
 
     .header__fon_text {
         font-size: 11px;
+    }
+
+    .header__dropdown {
+        width: 100% !important;
+    }
+
+    .dropdown-item {
+        padding: .25rem 6px;
+    }
+
+    .dropdown-menu {
+        font-size: 14px;
     }
 }
