--- a/css/terms.css
+++ b/css/terms.css
@@ -190,6 +190,10 @@ ul {
 /* ******************media************************** */
 
 @media(max-width:991px) {
+    .nav-item {
+        padding-bottom: 10px;
+    }
+
     .navbar-collapse {
         flex-basis: 100%;
         flex-grow: 1;
@@ -282,5 +286,17 @@ ul {
 
     .main__block_box_h1 {
         font-size: 23px;
+    }
+
+    .header__dropdown {
+        width: 100% !important;
+    }
+
+    .dropdown-item {
+        padding: .25rem 6px;
+    }
+
+    .dropdown-menu {
+        font-size: 14px;
     }
 }
