--- a/css/worldwide.css
+++ b/css/worldwide.css
@@ -367,6 +367,10 @@ ul {
 /* media */
 
 @media(max-width:991px) {
+    .nav-item {
+        padding-bottom: 10px;
+    }
+
     .navbar-collapse {
         flex-basis: 100%;
         flex-grow: 1;
@@ -504,4 +508,16 @@ ul {
     }
 }
 
-@media(max-width:320px) {}
+@media(max-width:320px) {
+    .header__dropdown {
+        width: 100% !important;
+    }
+
+    .dropdown-item {
+        padding: .25rem 6px;
+    }
+
+    .dropdown-menu {
+        font-size: 14px;
+    }
+}
