--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,22 @@ body {
 }
 
 .header__fon {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
-    padding: 100px 0;
-    cursor: pointer;
-    border-radius: 0 0 250px 0;
+    width: 100%;
+    height: 100vh;
+    background: #136285 url(../img/london__home.png);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+}
+
+.hader__wave {
+    position: absolute;
+    width: 100%;
+    bottom: -100px;
 }
 
 .header__fon_p {
+    padding-top: 50px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
@@ -465,10 +473,19 @@ body {
 /* footer__block start */
 
 .footer__block {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
-    padding: 100px 0 0 0;
-    border-radius: 250px 0 0 0;
+    width: 100%;
+    height: 100%;
+    background: #136285 url(../img/london.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
+}
+
+.footer__wave {
+    position: absolute;
+    width: 100%;
+    top: 0;
 }
 
 .footer__block_box {
@@ -479,6 +496,7 @@ body {
 }
 
 .footer__block_box_span {
+    padding-top: 400px;
     font-size: 25px;
     color: #fff;
     font-weight: 700;
@@ -642,6 +660,21 @@ ul {
 
 
 @media(max-width:991px) {
+    .header__fon_text {
+        padding-top: 0px;
+        font-size: 14px;
+    }
+
+    .header__fon_pp {
+        font-size: 16px;
+        padding-top: 20px;
+    }
+
+    .header__fon_h1 {
+        font-style: normal;
+        font-size: 38px;
+    }
+
     .nav-item {
         padding-bottom: 10px;
     }
@@ -748,6 +781,7 @@ ul {
 
     .footer__block_box_span {
         font-size: 20px;
+        padding-top: 230px;
     }
 
     .footer__block_box_h1 {
@@ -756,6 +790,14 @@ ul {
 }
 
 @media(max-width:767px) {
+    .header__fon_h1 {
+        font-size: 25px;
+    }
+
+    .header__fon_text {
+        padding-top: 40px;
+    }
+
     .main__block_img {
         width: 100%;
         height: 100%;
@@ -918,11 +960,19 @@ ul {
 
 @media(max-width:414px) {
     .header__fon_p {
+        font-size: 14px;
+    }
+
+    .header__fon_h1 {
+        font-size: 25px;
+    }
+
+    .header__fon_p {
         font-size: 19px;
     }
 
     .header__fon_text {
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .header__fon_h1 {
@@ -930,7 +980,7 @@ ul {
     }
 
     .header__fon_pp {
-        font-size: 17px;
+        font-size: 14px;
     }
 
     .main__block_text {
@@ -949,6 +999,7 @@ ul {
 
     .footer__block_box_span {
         font-size: 14px;
+        padding-top: 144px;
     }
 
     .footer__block_box_h1 {
