--- a/css/TeflJobs.css
+++ b/css/TeflJobs.css
@@ -71,11 +71,12 @@ body {
 }
 
 .header__fon {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
     padding: 100px 0;
-    cursor: pointer;
-    border-radius: 0 0 250px 0;
+    width: 100%;
+    background: #26b0ebcd url(../img/tefl__jobs.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
 }
 
 .header__fon_p {
@@ -330,11 +331,16 @@ ul {
 /* footer__block start */
 
 .footer__block {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
-    padding: 100px 0 0 0;
-    border-radius: 250px 0 0 0;
+    width: 100%;
+    padding-top: 100px;
+    height: 100%;
+    background: #26b0ebcd url(../img/london2.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
 }
+
 
 .footer__block_box {
     display: flex;
