--- a/css/contact.css
+++ b/css/contact.css
@@ -70,9 +70,8 @@ body {
 }
 
 .header__fon {
-    padding-top: 150px;
+    padding: 200px 0;
     width: 100%;
-    height: 100vh;
     background: #136285 url(../img/contact.jpg);
     background-size: cover;
     background-position: center;
@@ -254,17 +253,11 @@ body {
 .footer__block {
     width: 100%;
     height: 100%;
-    background: #136285 url(../img/london.jpg);
+    background: #26b0ebcd url(../img/contactFonn.jpg);
     background-size: cover;
     background-position: center;
     background-blend-mode: multiply;
     position: relative;
-}
-
-.footer__wave {
-    position: absolute;
-    width: 100%;
-    top: 0;
 }
 
 
@@ -276,7 +269,7 @@ body {
 }
 
 .footer__block_box_span {
-    padding-top: 400px;
+    padding-top: 100px;
     font-size: 25px;
     color: #fff;
     font-weight: 700;
@@ -293,6 +286,21 @@ body {
     font-style: normal;
     padding-top: 30px;
     margin-bottom: 0;
+}
+
+.footer__block_box_button_link {
+    font-weight: 600;
+    color: #fff;
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 14px;
+    border-radius: 4px;
+    letter-spacing: 5px;
+    text-decoration: none;
+}
+
+.footer__block_box_button_link:hover {
+    color: #fff;
 }
 
 .footer__block_box_button {
