--- a/css/partners.css
+++ b/css/partners.css
@@ -71,9 +71,13 @@ body {
 }
 
 .header__fon {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
-    padding: 100px 0;
+    width: 100%;
+    padding: 200px 0;
+    background: #26b0ebcd url(../img/partners.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
 }
 
 .header__fon_h1 {
@@ -124,10 +128,14 @@ body {
 /* footer__block start */
 
 .footer__block {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
-    padding: 100px 0 0 0;
-    border-radius: 250px 0 0 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    background: #26b0ebcd url(../img/london5.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
 }
 
 .footer__block_box {
