--- a/css/reviews.css
+++ b/css/reviews.css
@@ -72,8 +72,12 @@ body {
 }
 
 .header__fon {
-    padding: 100px 0;
-    background: #ff5252;
+    width: 100%;
+    padding: 200px 0;
+    background: #26b0ebcd url(../img/review.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
 }
 
 .header__fon_h1 {
@@ -176,10 +180,14 @@ body {
 /* footer__block start */
 
 .footer__block {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
-    padding: 100px 0 0 0;
-    border-radius: 250px 0 0 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    background: #26b0ebcd url(../img/london5.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
 }
 
 .footer__block_box {
