--- a/css/staff.css
+++ b/css/staff.css
@@ -71,7 +71,11 @@ body {
 }
 
 .header__fon_img {
-    background: url(https://intesoltesoltraining.com/wp-content/uploads/2018/06/About-INTESOL-Worldwide.jpg) no-repeat center center / cover;
+    width: 100%;
+    background: #26b0ebcd url(../img/staff.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
     padding: 200px 0;
     background-attachment: fixed;
 }
@@ -183,10 +187,14 @@ body {
 /* footer__block start */
 
 .footer__block {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
-    padding: 100px 0 0 0;
-    border-radius: 250px 0 0 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    background: #26b0ebcd url(../img/london5.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
 }
 
 .footer__block_box {
