--- a/css/worldwide.css
+++ b/css/worldwide.css
@@ -72,8 +72,13 @@ body {
 
 
 .header__fon {
-    padding: 100px 0;
-    background: #ff5252;
+    width: 100%;
+    padding: 200px 0;
+    background: #26b0ebcd url(../img/world.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
 }
 
 .header__fon_h1 {
@@ -85,7 +90,15 @@ body {
     margin-bottom: 0;
     text-align: center;
 }
-
+.franchise__img{
+    width: 100%;
+    padding: 200px 0;
+    background: #26b0ebcd url(../img/franchise__fon.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
+}
 /* ********************header end */
 /* ************************************************************************ */
 /* ********main__block start******************** */
@@ -179,12 +192,15 @@ body {
 /* footer__block start */
 
 .footer__block {
-    background: rgb(255, 250, 250);
-    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
-    padding: 100px 0 0 0;
-    border-radius: 250px 0 0 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    background: #26b0ebcd url(../img/london4.jpg);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
 }
-
 .footer__block_box {
     display: flex;
     flex-direction: column;
