--- a/css/acredition.css
+++ b/css/acredition.css
@@ -72,15 +72,13 @@ body {
 
 
 .header__fon {
+    padding: 100px 0;
+    background: #ff5252;
+    background: url(https://vokrugsveta.ua/wp-content/uploads/2020/03/shutterstock_314134553.jpg);
     width: 100%;
-    padding: 200px 0;
-    background: #26b0ebcd url(https://vokrugsveta.ua/wp-content/uploads/2020/03/shutterstock_314134553.jpg);
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: multiply;
-    position: relative;
+    height: auto;
 }
-/* #26b0ebcd */
+
 .header__fon_h1 {
     font-family: Montserrat;
     font-style: normal;
@@ -90,15 +88,7 @@ body {
     margin-bottom: 0;
     text-align: center;
 }
-.franchise__img{
-    width: 100%;
-    padding: 200px 0;
-    background: #26b0ebcd url(../img/franchise__fon.jpg);
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: multiply;
-    position: relative;
-}
+
 /* ********************header end */
 /* ************************************************************************ */
 /* ********main__block start******************** */
@@ -192,15 +182,12 @@ body {
 /* footer__block start */
 
 .footer__block {
-    width: 100%;
-    height: 100%;
-    padding-top: 100px;
-    background: #26b0ebcd url(../img/london4.jpg);
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: multiply;
-    position: relative;
+    background: rgb(255, 250, 250);
+    background: radial-gradient(circle, rgba(255, 250, 250, 1) 0%, rgba(255, 82, 82, 1) 0%);
+    padding: 100px 0 0 0;
+    border-radius: 250px 0 0 0;
 }
+
 .footer__block_box {
     display: flex;
     flex-direction: column;
