--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
     text-decoration: none;
     box-sizing: border-box;
 }
+.main__courses_h5_1{
+    text-align: center;
+    padding: 40px 0;
+    font-size: 30px;
+    font-weight: 600;
+}
 
 .row-ml {
     margin-left: 0;
@@ -72,7 +78,7 @@ body {
 
 .header__fon {
     width: 100%;
-    height: 100vh;
+    padding: 100px 0;
     background: #26b0ebcd url(../img/london__home.png);
     background-size: cover;
     background-position: center;
@@ -277,12 +283,25 @@ body {
 .main__courses-box {
     border: 1px solid #bebebe;
     margin: 0 15px 50px 15px;
+
+border-radius: 20px;
+transition: 1s;
+}
+.main__courses-box:hover {
+
+    -webkit-box-shadow: 12px 19px 19px -6px rgba(34, 60, 80, 0.65);
+-moz-box-shadow: 12px 19px 19px -6px rgba(34, 60, 80, 0.65);
+box-shadow: 12px 19px 19px -6px rgba(34, 60, 80, 0.65);
+border-radius:20px;
+
 }
 
 .main__courses-box_first {
     padding: 10px 0;
     background-color: #bebebe;
     text-align: center;
+    border-top-left-radius: 18px;
+    border-top-right-radius: 18px;
 }
 
 .main__courses-box_first_h4 {
@@ -359,8 +378,34 @@ body {
     color: #fff;
     outline: none;
     margin-bottom: 30px;
+    border-radius: 50px;
+}
+/* ////////////////////  */
+.main__courses-box_button_link-777 {
+
+    width: 100%;
+    padding: 10px;
+    background-color: #ff5252;
+    border: 1px solid #ff5252;
+    line-height: 1.7em !important;
+    font-size: 20px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    color: #fff;
+    outline: none;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+    text-decoration: none;
+}
+.main__courses-box_button_link-777:hover {
+    color: #fff;
 }
 
+/* ////////////////////  */
 .main__courses_h5 {
     margin-bottom: 0;
     padding: 70px 0;
@@ -474,7 +519,7 @@ body {
 
 .footer__block {
     width: 100%;
-    height: 100%;
+    padding: 100px 0 0 0;
     background: #26b0ebcd url(../img/london.jpg);
     background-size: cover;
     background-position: center;
@@ -496,7 +541,6 @@ body {
 }
 
 .footer__block_box_span {
-    padding-top: 400px;
     font-size: 25px;
     color: #fff;
     font-weight: 700;
